Fixed More-button issue on IE

--- a/css/style.scss
+++ b/css/style.scss
@@ -441,6 +441,9 @@ select {
 	   		color:#99c43d;
 	   }	
 }
+.more-div{
+	text-align:center;
+}
 .more-container{
 	position:relative;
 	display:none;
